--- a/hw1/catalog/catalog.html
+++ b/hw1/catalog/catalog.html
@@ -20,8 +20,8 @@
         </ul>
       </nav>
       <div class="catalog-content-box">
-        <h1 class="heading margin-bot">Каталог</h1>
-        <p class="margin-bot">
+        <h1 class="main-heading margin-bot">Каталог</h1>
+        <p class="text-block margin-bot">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis possimus
           amet accusantium fugiat voluptatibus quidem pariatur voluptas laborum
           aperiam dolor suscipit nemo saepe hic facere sed odio ratione
@@ -45,7 +45,7 @@
         <div class="card">
           <img src="../img/img1.jpg" alt="card-1" class="card-img" />
           <h3 class="card-heading">Lorem, ipsum dolor.</h3>
-          <p class="card-info">
+          <p class="text-block card-info">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel
             veniam, pariatur nam iste eligendi autem!
           </p>
@@ -53,7 +53,7 @@
         <div class="card">
           <img src="../img/img2.jpg" alt="card-1" class="card-img" />
           <h3 class="card-heading">Lorem, ipsum dolor.</h3>
-          <p class="card-info">
+          <p class="text-block card-info">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel
             veniam, pariatur nam iste eligendi autem!
           </p>
@@ -61,7 +61,7 @@
         <div class="card">
           <img src="../img/img3.jpg" alt="card-2" class="card-img" />
           <h3 class="card-heading">Lorem, ipsum dolor.</h3>
-          <p class="card-info">
+          <p class="text-block card-info">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel
             veniam, pariatur nam iste eligendi autem!
           </p>
