--- a/hw1/index.html
+++ b/hw1/index.html
@@ -20,8 +20,8 @@
         </ul>
       </nav>
       <div class="index-content-box">
-        <h1 class="heading margin-bot">Главная страница</h1>
-        <p class="margin-bot">
+        <h1 class="main-heading margin-bot">Главная страница</h1>
+        <p class="text-block margin-bot">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
           nihil. Illo tempora recusandae fuga hic, architecto cupiditate optio
           non est amet magnam? Debitis provident incidunt, libero modi
@@ -29,14 +29,14 @@
           voluptatem distinctio molestiae soluta nisi doloribus. Quos vero aut
           quibusdam quidem aperiam rem sint eius.
         </p>
-        <h2 class="heading margin-bot">Добро пожаловать на сайт</h2>
-        <p class="margin-bot">
+        <h2 class="smaller-heading margin-bot">Добро пожаловать на сайт</h2>
+        <p class="text-block margin-bot">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit cumque
           quaerat temporibus magnam mollitia nobis iure, accusantium recusandae
           maxime beatae labore eos laborum tenetur, possimus fuga. Quo error
           nobis dolore.
         </p>
-        <p class="margin-bot">
+        <p class="text-block margin-bot">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
           pariatur placeat aliquid in ipsum voluptates eum dolorem, repellat
           nobis officia! Autem porro deleniti aliquam ullam, sapiente
@@ -45,7 +45,7 @@
           hic ducimus pariatur saepe voluptas asperiores. Sit nihil adipisci
           repellendus saepe.
         </p>
-        <p class="margin-bot">
+        <p class="text-block margin-bot">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt,
           similique. Hic magni repellendus quisquam cum ad numquam commodi optio
           sit rem nemo in nostrum libero sapiente, laboriosam, culpa assumenda.
