--- a/hw3-4-5/index.html
+++ b/hw3-4-5/index.html
@@ -14,11 +14,13 @@
     <div class="container">
       <div class="top">
         <div class="header">
-          <img
-            src="img/header_logo.svg"
-            alt="header logo"
-            class="header_logo"
-          />
+          <a href="#" class="link_logo">
+            <img
+              src="img/header_logo.svg"
+              alt="header logo"
+              class="header_logo"
+            />
+          </a>
           <nav class="header_nav">
             <a href="#" class="header_link">Home</a>
             <a href="#" class="header_link">About Us</a>
