--- a/hw3-4-5/index.html
+++ b/hw3-4-5/index.html
@@ -56,6 +56,75 @@
           <img src="img/logo6.svg" alt="logo6" class="logo" />
         </div>
       </div>
+
+      <section class="item-box">
+        <div class="item">
+          <img src="img/icon1.svg" alt="icon1" class="item-img" />
+          <h3 class="item-heading">Grow Your Business</h3>
+          <p class="item-text">
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </p>
+          <a href="#" class="item-link">Read More...</a>
+        </div>
+        <div class="item">
+          <img src="img/icon2.svg" alt="icon2" class="item-img" />
+          <h3 class="item-heading">Get Quality Ieads</h3>
+          <p class="item-text">
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </p>
+          <a href="#" class="item-link">Read More...</a>
+        </div>
+        <div class="item">
+          <img src="img/icon3.svg" alt="icon3" class="item-img" />
+          <h3 class="item-heading">Drive More Sales</h3>
+          <p class="item-text">
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </p>
+          <a href="#" class="item-link">Read More...</a>
+        </div>
+      </section>
+
+      <section class="sec-cards">
+        <h2 class="sec-heading">Why You Should Choose Us.</h2>
+        <p class="sec-text">
+          Distinctively exploit optimal alignments for intuitive bandwidth.
+          Quickly coordinate e-business applications through revolutionary
+          catalysts.
+        </p>
+        <div class="cards-box">
+          <div class="card">
+            <img src="img/card1.png" alt="card1" class="card-img" />
+            <h3 class="card-heading">Keyword Research</h3>
+            <p class="card-text">
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <a href="#" class="card-btn-link">Learn More</a>
+          </div>
+          <div class="card">
+            <img src="img/card2.png" alt="card2" class="card-img" />
+            <h3 class="card-heading">Seo Optimazadion</h3>
+
+            <p class="card-text">
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <a href="#" class="card-btn-link">Learn More</a>
+          </div>
+          <div class="card">
+            <img src="img/card3.png" alt="card3" class="card-img" />
+            <h3 class="card-heading">Social Marketing</h3>
+            <p class="card-text">
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <a href="#" class="card-btn-link">Learn More</a>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
